--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,14 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.4
   http: ^0.13.5
-  webview_flutter: ^2.0.14
   path_provider: ^2.0.14
   shared_preferences: ^2.0.20
   flutter_riverpod: ^2.3.7
   intl: ^0.18.1
   internet_connection_checker: ^1.0.0+1
   fl_chart: ^0.63.0
+  alan_voice: ^3.0.0
+  video_player: ^2.7.1
 
 dev_dependencies:
   flutter_test:
