--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.4
   http: ^0.13.5
-  path_provider: ^2.0.14
+  path_provider: ^2.1.1
   shared_preferences: ^2.0.20
   flutter_riverpod: ^2.3.7
   intl: ^0.18.1
@@ -42,6 +42,9 @@ dependencies:
   alan_voice: ^3.0.0
   video_player: ^2.7.1
   youtube_player_flutter: ^8.1.2
+  pdf: ^3.10.4
+  flutter_pdfview: ^1.3.1
+  syncfusion_flutter_pdfviewer: ^20.4.54
 
 dev_dependencies:
   flutter_test:
